sna: Correct the order of screen private teardown

So that we do not keep a stale references of the last cached pixmap
across server regeneration (or shutdown).

Reported-by: Thierry Reding <thierry.reding@avionic-design.de>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=47357
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>